--- a/app/pug/modules/logo/_logo.pug
+++ b/app/pug/modules/logo/_logo.pug
@@ -1,5 +1,6 @@
 .logo
   a.logo__link(href="/")
     span.logo__icon.icon-logo-agency
-    span.logo__txt Агентство
-    span.logo__txt по банкротству
+    span.logo__box-text
+      span.logo__txt Агентство
+      span.logo__txt по банкротству
