--- a/app/pug/page/index.pug
+++ b/app/pug/page/index.pug
@@ -6,6 +6,7 @@ block variables
   -let pathCss ="css/main-min.css"
 block content
   include ../modules/header/_header
+  include ../modules/section/_section-hero
 block foot
 block script
   script(src="libs/libs-min.js")
