--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,5 +1,6 @@
 @import "libs/libs";
 @import "vars/variables";
+@import "mixin/mixin";
 @import "fonts/fonts";
 @import "grid/grid";
 @import "width/width";
