--- a/app/scss/vars/_variables.scss
+++ b/app/scss/vars/_variables.scss
@@ -18,6 +18,7 @@ $swatch_15: #eaeeef;
 $swatch_16: #ff0c0a;
 $swatch_17: #fbdbdb;
 $swatch_18: #f9a510;
+$swatch_19: #e2030352;
 
 // gradient
 $gradient-accent: linear-gradient(
