--- a/app/scss/components/_slider.scss
+++ b/app/scss/components/_slider.scss
@@ -1,1 +1,92 @@
 /*slider*/
+.slider-hero {
+  @media (min-width: $lg) {
+    position: relative;
+  }
+  &__content {
+    padding: 5px;
+    @media (min-width: $xl) {
+      padding-right: 0;
+      padding-left: 15px;
+    }
+  }
+  &__content-top {
+  }
+  &__txt {
+    display: block;
+    font-size: 28px;
+    font-weight: bold;
+    font-style: italic;
+    &_position {
+      @media (min-width: $xl) {
+        line-height: 35px;
+      }
+    }
+  }
+  &__box-button {
+    margin-top: 45px;
+    padding-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @media (min-width: $md) {
+      margin-top: 40px;
+    }
+    @media (min-width: $xl) {
+      margin-top: 45px;
+    }
+  }
+  &__control-panel {
+    display: none;
+    @media (min-width: $lg) {
+      display: block;
+      width: 100%;
+      height: 40px;
+      position: absolute;
+      top: 71px;
+      left: 0;
+      z-index: 1;
+    }
+  }
+  &__box-pagination
+    > .swiper-pagination.swiper-pagination-bullets
+    > .swiper-pagination-bullet {
+    background-color: $swatch_4;
+    transition: background-color 0.2s ease-in-out;
+    opacity: 1;
+    @media (min-width: $xl) {
+      width: 10px;
+      height: 10px;
+    }
+  }
+  &__box-pagination
+    > .swiper-pagination.swiper-pagination-bullets
+    > .swiper-pagination-bullet:hover {
+    background-color: $swatch_16;
+    transition: background-color 0.8s ease-in-out;
+  }
+  &__box-pagination
+    > .swiper-pagination.swiper-pagination-bullets
+    > .swiper-pagination-bullet:nth-child(2) {
+    margin: 0 10px;
+  }
+  &__box-pagination > .swiper-pagination {
+    position: static;
+    @media (min-width: $lg) {
+      position: relative;
+      top: 75px;
+      left: 9px;
+    }
+  }
+  &__box-pagination
+    > .swiper-pagination.swiper-pagination-bullets
+    > .swiper-pagination-bullet.swiper-pagination-bullet-active {
+    background: $swatch_1;
+  }
+  .swiper-slide {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
