hero section has been finalized and the finance section is ready

--- a/app/pug/modules/section/_section-hero.pug
+++ b/app/pug/modules/section/_section-hero.pug
@@ -16,9 +16,10 @@ section.section.section-hero
                 img.section-hero__picture(src="img/man.png", alt="man")
             .section-hero__box-slider
               include ../slider/slider-hero
-            .section-hero__box-figure.section-hero__box-figure_hide.section-hero__box-figure_visible.section-hero__box-figure_position.animated.slideInRight
-              figure.section-hero__figure.section-hero__figure_size.js-animation-start
-                img.section-hero__picture(src="img/calc.png", alt="calc")
+            .section-hero__wrap
+              .section-hero__box-figure.section-hero__box-figure_hide.section-hero__box-figure_visible.section-hero__box-figure_position.animated.slideInRight
+                figure.section-hero__figure.section-hero__figure_size
+                  img.section-hero__picture(src="img/calc.png", alt="calc")
 
 
 
