--- a/app/pug/page/index.pug
+++ b/app/pug/page/index.pug
@@ -7,6 +7,8 @@ block variables
 block content
   include ../modules/header/_header
   include ../modules/section/_section-hero
+  main.main
+    include ../modules/section/_section-finance
 block foot
 block script
   script(src="libs/libs-min.js")
