--- a/app/scss/components/_form.scss
+++ b/app/scss/components/_form.scss
@@ -1,1 +1,200 @@
 /*form*/
+.form-feedback {
+  padding: 20px 10px 10px;
+  border: solid 8px $swatch_1;
+  text-align: center;
+  @media (min-width: $sm) {
+    padding-top: 37px;
+    padding-right: 28px;
+    padding-bottom: 14px;
+    padding-left: 28px;
+  }
+  &__header {
+    margin-bottom: 30px;
+    @media (min-width: $xl) {
+      margin-bottom: 27px;
+    }
+  }
+  &__title {
+    display: block;
+    margin-bottom: 20px;
+    font-size: 20px;
+    font-weight: bold;
+    @media (min-width: $sm) {
+      font-size: 22px;
+    }
+    @media (min-width: $md) {
+      font-size: 24px;
+    }
+  }
+  &__subtitle {
+    display: block;
+    font-size: 14px;
+    font-style: italic;
+    @media (min-width: $sm) {
+      font-size: 16px;
+    }
+    @media (min-width: $md) {
+      font-size: 17px;
+    }
+  }
+  &__group {
+    margin-bottom: 25px;
+  }
+  &__box-field {
+    display: inline-block;
+    width: 225px;
+    margin-bottom: 15px;
+  }
+  &__field {
+    padding: 20px 45px;
+    text-align: center;
+    font-family: "Roboto";
+    font-size: 13px;
+    font-weight: 500;
+    color: $swatch_1;
+    border: solid 1px $swatch_5;
+    border-radius: 28px;
+    &:focus {
+      color: $swatch_1;
+      border-color: $swatch_1;
+      transition: border-color 0.3s ease;
+    }
+    &::placeholder {
+      color: $swatch_4;
+      font-weight: 400;
+    }
+    &:focus::placeholder {
+      color: transparent;
+    }
+  }
+  &__box-button {
+    display: inline-block;
+  }
+  &__footer {
+  }
+  &__box-inform {
+    margin-bottom: 16px;
+    @media (min-width: $xl) {
+      margin-bottom: 14px;
+    }
+  }
+  &__txt-inform {
+    font-family: "Roboto";
+    font-size: 13px;
+    font-weight: 400;
+  }
+  &__box-checkbox {
+    margin: 0 auto;
+    width: 260px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    @media (min-width: $md) {
+      width: 300px;
+    }
+  }
+  &__checkbox {
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    top: 1px;
+    left: 10px;
+    background: transparent;
+    z-index: 2;
+    cursor: pointer;
+    @media (min-width: $sm) {
+      top: 2px;
+      left: 8px;
+    }
+    &:checked {
+      background: transparent;
+    }
+    &:focus {
+      border: 1px solid $swatch_1;
+      background: transparent;
+    }
+    &:checked + .form-feedback__txt-checkbox::after {
+      content: "";
+    }
+    + .form-feedback__txt-checkbox::after {
+      content: none;
+    }
+  }
+  &__txt-checkbox {
+    padding-left: 16px;
+    font-family: "Roboto";
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: -1px;
+    color: $swatch_4;
+    @media (min-width: $md) {
+      letter-spacing: initial;
+    }
+    &::before {
+      content: "";
+      display: inline-block;
+      width: 10px;
+      height: 10px;
+      border: 1px solid $swatch_6;
+      background-color: $swatch_6;
+      left: 10px;
+      top: 1px;
+      @media (min-width: $sm) {
+        top: 2px;
+        left: 8px;
+      }
+    }
+    &::after {
+      content: "";
+      display: inline-block;
+      width: 6px;
+      height: 3px;
+      border-left: 1px solid $swatch_0;
+      border-bottom: 1px solid $swatch_0;
+      transform: rotate(-45deg);
+      left: 12px;
+      top: 3px;
+      @media (min-width: $sm) {
+        top: 4px;
+        left: 10px;
+      }
+    }
+    &::before,
+    &::after {
+      position: absolute;
+    }
+    @media (min-width: $sm) {
+      font-size: 13px;
+    }
+  }
+
+  &__link {
+    font-family: "Roboto";
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: -1px;
+    display: inline-block;
+    position: relative;
+    text-decoration: none;
+    color: $swatch_4;
+    @media (min-width: $md) {
+      letter-spacing: initial;
+    }
+    &:hover {
+      color: $swatch_4;
+    }
+    &:after {
+      content: "";
+      width: 100%;
+      position: absolute;
+      top: 15px;
+      left: 0;
+      border-top: 1px solid $swatch_4;
+      @media (min-width: $ultra) {
+        border: 0;
+      }
+    }
+  }
+}
