modified sections and ready modal window

--- a/app/pug/modules/form/_form-feedback.pug
+++ b/app/pug/modules/form/_form-feedback.pug
@@ -1,6 +1,7 @@
 //- Remember to specify values for variables
 //- formFeedbackTitle and formFeedbackSubtitle
 //- Point where the first include to the form
+//- Don't forget the variable formFeedbackBtnValue for the button name
 form.form-feedback(action="/" method="POST")
   .form-feedback__header
     span.form-feedback__title=formFeedbackTitle
@@ -9,7 +10,7 @@ form.form-feedback(action="/" method="POST")
     .form-feedback__box-field
       input.form-feedback__field#fieldPhone(type="tel" placeholder="Введите ваш телефон" autocomplete="off" maxlength="20")
     .form-feedback__box-button
-      input.button.button_middle.button_font(type="submit" value="Получить инструкцию")
+      input.button.button_middle.button_font(type="submit" value=formFeedbackBtnValue)
   .form-feedback__footer
     .form-feedback__box-inform
       span.form-feedback__txt-inform Мы перезвоним в течение 5 минут
