--- a/app/pug/modules/header/_header.pug
+++ b/app/pug/modules/header/_header.pug
@@ -18,3 +18,4 @@ header.header
             button.button.button_small.animated.wobble.delay-2s#btnOpenModal
               span.button__txt.button__txt_small Заказать звонок
       .header__modal
+        include ../modal/_modal
