--- a/app/pug/modules/section/_section-finance.pug
+++ b/app/pug/modules/section/_section-finance.pug
@@ -12,8 +12,9 @@ section.section.section-finance
         .grid__item.width-1-1.width-1-2-lg
           .section-finance__box-form
             //-variables for text for form headings
-            -let formFeedbackTitle = "Получите бесплатно пошаговую инструкцию "
-            -let formFeedbackSubtitle = "по процедуре банкротства прямо сейчас:"
+            -formFeedbackTitle = "Получите бесплатно пошаговую инструкцию "
+            -formFeedbackSubtitle = "по процедуре банкротства прямо сейчас:"
+            -formFeedbackBtnValue = "Получить инструкцию"
             include ../form/_form-feedback
       .section-finance__box-figure
         figure.section-finance__figure.wow.slideInLeft(data-wow-offset="200")
