--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -13,4 +13,5 @@
 @import "components/card";
 @import "components/list";
 @import "components/button";
+@import "components/modal";
 @import "components/footer";
