--- a/app/scss/components/_button.scss
+++ b/app/scss/components/_button.scss
@@ -78,3 +78,23 @@
     }
   }
 }
+
+.button-close {
+  border: 0;
+  background-color: transparent;
+  width: 50px;
+  height: 50px;
+  position: relative;
+  -webkit-tap-highlight-color: transparent;
+  cursor: pointer;
+  &::after {
+    content: "×";
+    font-size: 75px;
+    color: $swatch_2;
+    position: absolute;
+    top: -19px;
+    left: 0;
+    bottom: 0;
+    right: 0;
+  }
+}
