--- a/app/scss/vars/_variables.scss
+++ b/app/scss/vars/_variables.scss
@@ -19,6 +19,7 @@ $swatch_16: #ff0c0a;
 $swatch_17: #fbdbdb;
 $swatch_18: #f9a510;
 $swatch_19: #e2030352;
+$swatch_20: #333333;
 
 // gradient
 $gradient-accent: linear-gradient(
