--- a/app/scss/components/_section.scss
+++ b/app/scss/components/_section.scss
@@ -205,11 +205,10 @@
     z-index: 3;
     width: 50px;
     height: 50px;
-    top: 10px; //50
+    top: 10px;
     left: 50%;
-    // margin: 0 -15px;
     margin-left: -20px;
-    animation: arrow-down 1s linear infinite;
+    @include animationMoving(arrow-down, top, -7, 1s, linear, infinite);
   }
   .js-arrow-down_md-off::after {
     @media (min-width: $md) {
