--- a/app/pug/modules/form/_form-feedback.pug
+++ b/app/pug/modules/form/_form-feedback.pug
@@ -8,7 +8,7 @@ form.form-feedback(action="/" method="POST")
     span.form-feedback__subtitle=formFeedbackSubtitle
   .form-feedback__group
     .form-feedback__box-field
-      input.form-feedback__field#fieldPhone(type="tel" placeholder="Введите ваш телефон" autocomplete="off" maxlength="20")
+      input.form-feedback__field(type="tel" placeholder="Введите ваш телефон" autocomplete="off" maxlength="20")
     .form-feedback__box-button
       input.button.button_middle.button_font(type="submit" value=formFeedbackBtnValue)
   .form-feedback__footer
