--- a/app/pug/modules/slider/slider-hero.pug
+++ b/app/pug/modules/slider/slider-hero.pug
@@ -8,7 +8,7 @@
             span.slider-hero__txt эксперты!
           .slider-hero__content-bottom
             .slider-hero__box-button
-              a.button.button_middle(href="#")
+              a.button.button_middle(href="#" tabindex="-1")
                 span.button__txt.button__txt_small Подробная консультация
       .swiper-slide
         .slider-hero__content
@@ -17,7 +17,7 @@
             span.slider-hero__txt документами!
           .slider-hero__content-bottom
             .slider-hero__box-button
-              a.button.button_middle(href="#")
+              a.button.button_middle(href="#" tabindex="-1")
                 span.button__txt.button__txt_small Подробная консультация
       .swiper-slide
         .slider-hero__content
@@ -26,7 +26,7 @@
             span.slider-hero__txt совершенно легально!
           .slider-hero__content-bottom
             .slider-hero__box-button
-              a.button.button_middle(href="#")
+              a.button.button_middle(href="#" tabindex="-1")
                 span.button__txt.button__txt_small Подробная консультация
   .slider-hero__control-panel
     .button-arrow.button-arrow_bold.button-arrow_position.button-arrow_position_right.icon-arrow-big-right.slider-hero-button-next
