section procedure is ready

--- a/app/pug/page/index.pug
+++ b/app/pug/page/index.pug
@@ -9,6 +9,7 @@ block content
   include ../modules/section/_section-hero
   main.main
     include ../modules/section/_section-finance
+    include ../modules/section/_section-procedure
 block foot
 block script
   script(src="libs/libs-min.js")
