--- a/app/scss/components/_base.scss
+++ b/app/scss/components/_base.scss
@@ -155,6 +155,10 @@ button:active,
   outline-offset: 0;
 }
 
+.wow {
+  visibility: hidden;
+}
+
 .page {
   font-family: "Tinos", serif;
   font-size: 16px;
