changed file name

--- a/app/pug/modules/section/_section-hero.pug
+++ b/app/pug/modules/section/_section-hero.pug
@@ -15,7 +15,7 @@ section.section.section-hero
               figure.section-hero__figure.wow.slideInLeft(data-wow-offset="150")
                 img.section-hero__picture(src="img/man.png", alt="man")
             .section-hero__box-slider
-              include ../slider/slider-hero
+              include ../slider/_slider-hero
             .section-hero__wrap
               .section-hero__box-figure.section-hero__box-figure_hide.section-hero__box-figure_visible.section-hero__box-figure_position.animated.slideInRight
                 figure.section-hero__figure.section-hero__figure_size
