cost section is ready

--- a/app/pug/page/index.pug
+++ b/app/pug/page/index.pug
@@ -10,6 +10,7 @@ block content
   main.main
     include ../modules/section/_section-finance
     include ../modules/section/_section-procedure
+    include ../modules/section/_section-cost
 block foot
 block script
   script(src="libs/libs-min.js")
