serve section is ready and cards feature

--- a/app/pug/page/index.pug
+++ b/app/pug/page/index.pug
@@ -11,6 +11,7 @@ block content
     include ../modules/section/_section-finance
     include ../modules/section/_section-procedure
     include ../modules/section/_section-cost
+    include ../modules/section/_section-serve
 block foot
 block script
   script(src="libs/libs-min.js")
